--- a/1007_MVC/WebContent/html/main.html
+++ b/1007_MVC/WebContent/html/main.html
@@ -1,33 +1,16 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<title>index</title>
+<title>main</title>
 <!-- 외부CSS파일 연결 -->
-<link type="text/css" rel="stylesheet" href="css/common.css"/>
-<link type="text/css" rel="stylesheet" href="css/main.css"/>
+<link type="text/css" rel="stylesheet" href="../css/common.css"/>
+<link type="text/css" rel="stylesheet" href="../css/main.css"/>
 </head>
 <body>
 	<div id="wrap">
 		<!-- 상단 영역 -->
 		<div id="header">
-			<div class="txt_right">
-			<%--
-				Object obj = request.getAttribute("login_chk");
-				boolean chk = (boolean)obj;
-				if(!chk){
-			--%>
-			<c:if test="${!login_chk }">
-				<span><a href="Controller?type=login">로그인</a></span>
-			</c:if>
-			<c:if test="${login_chk }">
-				<span><a href="javascript:logout()">로그아웃</a></span>
-			</c:if>
-			</div>
 			<h1>SK Together</h1>
 			<ul class="gnb">		 <!-- class 다중 적용 -->
 				<li><a href=""><span class="menu m01">기브유</span></a></li>
@@ -43,7 +26,7 @@
 		<div id="contents">
 			<div class="main_img">
 				<a href="">
-					<img src="img/@img00.png"/>
+					<img src="../img/@img00.png"/>
 				</a>
 			</div>
 			<div class="main_news"> <!-- 뉴스들(3개)을 하나로 묶어 놓는 영역 -->
@@ -51,7 +34,7 @@
 					<p class="title">기브유 후원참여</p>
 					<a href="" class="new_src">
 						<span class="thum_img">
-							<img src="img/@img01.png" alt="기사사진"/>
+							<img src="../img/@img01.png" alt="기사사진"/>
 						</span>
 						<span class="ellip subject">
 							난청이지만 피아니스트가 되고픈
@@ -65,7 +48,7 @@
 					<p class="title">기브유 후원금 쓰임현황</p>
 					<a href="" class="new_src">
 						<span class="thum_img">
-							<img src="img/@img02.png" alt="기사사진"/>
+							<img src="../img/@img02.png" alt="기사사진"/>
 						</span>
 						<span class="ellip subject">
 							레티하씨 가정에 희망의 집 선물
@@ -78,7 +61,7 @@
 					<p class="title">기브유 나눔영상</p>
 					<a href="" class="new_src">
 						<span class="thum_img">
-							<img src="img/@img03.png" alt="기사사진"/>
+							<img src="../img/@img03.png" alt="기사사진"/>
 							
 							<span class="btn_play" title="동영상 재생">
 								<a href="">
@@ -99,19 +82,20 @@
 				<!-- 공지사항 -->
 				<div class="board_type01 fl">
 					<p class="title">공지사항</p>
-					<span class="more_view"><a href="Controller?type=notice">더보기</a></span>
+					<span class="more_view"><a href="">더보기</a></span>
 					<ul class="notice">
-					<c:if test="${ar ne null }">
-						<c:forEach var="memo" items="${ar }">
-							<li>
-								<a href="" class="ellip">${memo.content }</a>
-								<span class="date">${fn:substring(memo.reg_date, 0, 10) }</span>
-							</li>
-						</c:forEach>
-					</c:if>
-					<c:if test="${ar eq null }">
-						<li>등록된 공지가 없습니다.</li>					
-					</c:if>
+						<li>
+							<a href="">T-together리뉴얼 오픈입니다.</a>
+							<span class="date">2020.08.20</span>
+						</li>
+						<li>
+							<a href="">SUMMER 이벤트 당첨자 발표</a>
+							<span class="date">2020.08.17</span>
+						</li>
+						<li>
+							<a href="">글로벌아이티인재개발원 안내 </a>
+							<span class="date">2020.08.15</span>
+						</li>
 					</ul>
 				</div>
 				<!-- 공지사항 끝 -->
@@ -121,7 +105,7 @@
 					<span class="more_view"><a href="">더보기</a></span>
 					<div class="article">
 						<span class="thum_img">
-							<img src="img/@img04.png"/>
+							<img src="../img/@img04.png"/>
 						</span>
 						<span class="src">
 							[캠페인] 햇살이 따스한 가을날이 다가옵니다.
@@ -169,19 +153,5 @@
 		</div>
 		<!-- 하단영역 끝 -->
 	</div>
-	
-	<form action="Controller" method="post" name="frm">
-		<input type="hidden" name="type"/>
-	</form>
-	
-	<script>
-		function logout(){
-			//현재 문서에서 이름이 frm인 폼을 알아내어 그 안에 있는 요소들 중 
-			//이름이 type인 요소의 값(value)을 "logout"으로 지정한다.
-			document.frm.type.value = "logout";
-			
-			document.frm.submit();
-		}
-	</script>
 </body>
 </html>
